Se terminó todo el layaout

--- a/layaout/entradas.html
+++ b/layaout/entradas.html
@@ -192,6 +192,7 @@
 						<ul class="submenu">
 							<li><a href="listaAdopciones.html">Lista de adopciones</a></li>
 							<li><a href="mascota.html">Mascota</a></li>
+							<li><a href="listaMascotas.html">Lista Mascotas</a></li>
 							<li><a href="historialMedico.html">Historial Medico</a></li>
 							<li><a href="listaSolicitudes.html">Lista de solicitudes</a></li>
 							<li><a href="seguimientoProceso.html">Seguimiento de proceso</a></li>
@@ -244,7 +245,7 @@
 						<div class="col-md-6 col-sm-12 text-right">
 							
 							<div class="dropdown">
-								<a class="btn btn-primary" href="nuevoArticulo.html" role="button" data-toggle="">
+								<a class="btn btn-primary" href="nuevoArticuloEntradas.html" role="button" data-toggle="">
 									Nuevo
 								</a>
 							</div>
@@ -279,7 +280,7 @@
 											<div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
 												<a class="dropdown-item" href="/layaout/verArticulosEntradas.html"><i class="dw dw-eye"></i>Ver</a>
 												<a class="dropdown-item" href="/layaout/editarEntradasArticulos.html"><i class="dw dw-edit2"></i> Editar</a>
-												<a class="dropdown-item" href="/layaout/eliminarEntradaArticulos.html"><i class="dw dw-delete-3"></i> ELiminar</a>
+												<a class="dropdown-item" href="/layaout/eliminarEntradaArticulos.html"><i class="dw dw-delete-3"></i> Eliminar</a>
 												</div>
 												</div>
 											</div>
