--- a/layaout/listaArticulos.html
+++ b/layaout/listaArticulos.html
@@ -192,6 +192,7 @@
 						<ul class="submenu">
 							<li><a href="listaAdopciones.html">Lista de adopciones</a></li>
 							<li><a href="mascota.html">Mascota</a></li>
+							<li><a href="listaMascotas.html">Lista Mascotas</a></li>
 							<li><a href="historialMedico.html">Historial Medico</a></li>
 							<li><a href="listaSolicitudes.html">Lista de solicitudes</a></li>
 							<li><a href="seguimientoProceso.html">Seguimiento de proceso</a></li>
@@ -282,6 +283,7 @@
 												<a class="dropdown-item" href="/layaout/"><i class="dw dw-eye"></i>Ver</a>
 												<a class="dropdown-item" href="#"><i class="dw dw-edit2"></i> Editar</a>
 												<a class="dropdown-item" href="#"><i class="dw dw-delete-3"></i> ELiminar</a>
+												
 													</div>
 												</div>
 											</div>
