--- a/layaout/listaSolicitudes.html
+++ b/layaout/listaSolicitudes.html
@@ -192,6 +192,7 @@
 						<ul class="submenu">
 							<li><a href="listaAdopciones.html">Lista de adopciones</a></li>
 							<li><a href="mascota.html">Mascota</a></li>
+							<li><a href="listaMascotas.html">Lista Mascotas</a></li>
 							<li><a href="historialMedico.html">Historial Medico</a></li>
 							<li><a href="listaSolicitudes.html">Lista de solicitudes</a></li>
 							<li><a href="seguimientoProceso.html">Seguimiento de proceso</a></li>
@@ -256,7 +257,7 @@
 								<tr>
 									<th class="table-plus datatable-nosort">id</th>
 									<th>Estado</th>
-									<th>fechaSolicitud</th>
+									<th>Fecha Solicitud</th>
 									<th>Documento</th>
 									<th>mascota</th>
 									<th class="datatable-nosort">Acción</th>
@@ -266,10 +267,10 @@
 							<tbody>
 								<tr>
 									<td class="table-plus">1</td>
-									<td>Dakota</td>
+									<td>Terminado</td>
 									<td>20/5/2022</td>
-									<td>Criollo</td>
-									<td>Juan Pablo</td>
+									<td>898977</td>
+									<td>Dakota</td>
 									<td>
 										<div class="dropdown">
 											<a class="btn btn-link font-24 p-0 line-height-1 no-arrow dropdown-toggle" href="#" role="button" data-toggle="dropdown">
