--- a/layaout/profile.html
+++ b/layaout/profile.html
@@ -3,7 +3,7 @@
 <head>
 	<!-- Basic Page Info -->
 	<meta charset="utf-8">
-	<title>Consultar Salidas</title>
+	<title>Perfil</title>
 
 	<!-- Site favicon -->
 	<link rel="website icon" href="vendors/images/consultarInventario.png">
@@ -31,10 +31,6 @@
 	</script>
 </head>
 <body>
-<<<<<<< HEAD
-
-=======
->>>>>>> 7606f72 (Se completó el apartado de mascota y adopciones, asi mismo el perfil del usuario)
 	<div class="header">
 		<div class="header-left">
 			<div class="menu-icon dw dw-menu"></div>
@@ -191,6 +187,7 @@
 						<ul class="submenu">
 							<li><a href="listaAdopciones.html">Lista de adopciones</a></li>
 							<li><a href="mascota.html">Mascota</a></li>
+							<li><a href="listaMascotas.html">Lista Mascotas</a></li>
 							<li><a href="historialMedico.html">Historial Medico</a></li>
 							<li><a href="listaSolicitudes.html">Lista de solicitudes</a></li>
 							<li><a href="seguimientoProceso.html">Seguimiento de proceso</a></li>
