--- a/layaout/registroPerrito.html
+++ b/layaout/registroPerrito.html
@@ -192,6 +192,7 @@
 						<ul class="submenu">
 							<li><a href="listaAdopciones.html">Lista de adopciones</a></li>
 							<li><a href="mascota.html">Mascota</a></li>
+							<li><a href="listaMascotas.html">Lista Mascotas</a></li>
 							<li><a href="historialMedico.html">Historial Medico</a></li>
 							<li><a href="listaSolicitudes.html">Lista de solicitudes</a></li>
 							<li><a href="seguimientoProceso.html">Seguimiento de proceso</a></li>
@@ -264,7 +265,7 @@
 							</div>
 						</div>
 						<div class="form-group row">
-							<label class="col-sm-12 col-md-2 col-form-label">Fecha</label>
+							<label class="col-sm-12 col-md-2 col-form-label">Fecha Ingreso</label>
 							<div class="col-sm-12 col-md-10">
 								<input class="form-control" type="date" placeholder="08/10/2023">
 							</div>
@@ -300,8 +301,8 @@
 							</div>
 						</div>
 					</form>
-<a href="/layaout/mascota.html"><button class="btn btn-primary">Guardar</button></a>
-<a href="/layaout/mascota.html"><button style="border-color: brown; background-color: brown;" class="btn btn-primary">Cancelar</button></a>
+<a href="/layaout/listaMascotas.html"><button class="btn btn-primary">Guardar</button></a>
+<a href="/layaout/listaMascotas.html"><button style="border-color: brown; background-color: brown;" class="btn btn-primary">Cancelar</button></a>
 
 
 </form>
