--- a/layaout/salidas.html
+++ b/layaout/salidas.html
@@ -4,17 +4,10 @@
 <head>
 	<!-- Basic Page Info -->
 	<meta charset="utf-8">
-<<<<<<< HEAD
 	<title>Salidas</title>
 
 	<!-- Site favicon -->
-	<link rel="website icon" href="vendors/images/consultarInventario.png">
-=======
-	<title>Salidas/title>
-
-	<!-- Site favicon -->
-	<link rel="website icon" href="vendors/images/salidas.png">
->>>>>>> 7c301a7 (Se agrega la categoria gestion de adoptantes, se realiza las interfaces de todo el CRUD para gestion de usuarios y de adoptantes, se aplica aside y header a las interfaces que hacian falta por modificar)
+	<link rel="website icon" href="vendors/images/editarEntradas.png">
 
 	<!-- Mobile Specific Metas -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -39,13 +32,6 @@
 	</script>
 </head>
 <body>
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
-	
->>>>>>> e2ed06c (Se modificó y se agregaron las interfaces del apartado adopciones, las cuales fueron listado de adopciones y mascota)
-=======
->>>>>>> 7c301a7 (Se agrega la categoria gestion de adoptantes, se realiza las interfaces de todo el CRUD para gestion de usuarios y de adoptantes, se aplica aside y header a las interfaces que hacian falta por modificar)
 
 	<div class="header">
 		<div class="header-left">
@@ -194,12 +180,9 @@
 						</a>
 						<ul class="submenu">
 							<li><a href="usuarios.html">Gestión de usuarios</a></li>
-<<<<<<< HEAD
-=======
 						</ul>
 						<ul class="submenu">
 							<li><a href="adoptantes.html">Gestión de adoptantes</a></li>
->>>>>>> 7c301a7 (Se agrega la categoria gestion de adoptantes, se realiza las interfaces de todo el CRUD para gestion de usuarios y de adoptantes, se aplica aside y header a las interfaces que hacian falta por modificar)
 						</ul>
 					</li>
 					<li class="dropdown">
@@ -209,6 +192,7 @@
 						<ul class="submenu">
 							<li><a href="listaAdopciones.html">Lista de adopciones</a></li>
 							<li><a href="mascota.html">Mascota</a></li>
+							<li><a href="listaMascotas.html">Lista Mascotas</a></li>
 							<li><a href="historialMedico.html">Historial Medico</a></li>
 							<li><a href="listaSolicitudes.html">Lista de solicitudes</a></li>
 							<li><a href="seguimientoProceso.html">Seguimiento de proceso</a></li>
@@ -261,7 +245,7 @@
 						<div class="col-md-6 col-sm-12 text-right">
 							
 							<div class="dropdown">
-								<a class="btn btn-primary" href="nuevoArticulo.html" role="button" data-toggle="">
+								<a class="btn btn-primary" href="nuevoArticuloSalidas.html" role="button" data-toggle="">
 									Nuevo
 								</a>
 							</div>
@@ -294,9 +278,10 @@
 												<i class="dw dw-more"></i>
 											</a>
 											<div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
-												<a class="dropdown-item" href="/layaout/verArticulosEntradas.html"><i class="dw dw-eye"></i>Ver</a>
-												<a class="dropdown-item" href="/layaout/editarEntradasArticulos.html"><i class="dw dw-edit2"></i> Editar</a>
-												<a class="dropdown-item" href="/layaout/eliminarEntradaArticulos.html"><i class="dw dw-delete-3"></i> ELiminar</a>
+												<a class="dropdown-item" href="/layaout/verSalidasArticulo.html"><i class="dw dw-eye"></i>Ver</a>
+												<a class="dropdown-item" href="/layaout/editarSalidaArticulos.html"><i class="dw dw-edit2"></i> Editar</a>
+												<a class="dropdown-item" href="/layaout/eliminarSalidaArticulo.html"><i class="dw dw-delete-3"></i> Eliminar</a>
+												
 												</div>
 												</div>
 											</div>
