--- a/layaout/seguimientoProceso.html
+++ b/layaout/seguimientoProceso.html
@@ -192,6 +192,7 @@
 						<ul class="submenu">
 							<li><a href="listaAdopciones.html">Lista de adopciones</a></li>
 							<li><a href="mascota.html">Mascota</a></li>
+							<li><a href="listaMascotas.html">Lista Mascotas</a></li>
 							<li><a href="historialMedico.html">Historial Medico</a></li>
 							<li><a href="listaSolicitudes.html">Lista de solicitudes</a></li>
 							<li><a href="seguimientoProceso.html">Seguimiento de proceso</a></li>
@@ -267,11 +268,11 @@
 							<tbody>
 								<tr>
 									<td class="table-plus">1</td>
-									<td>Dakota</td>
-									<td>20/5/2022</td>
-									<td>Criollo</td>
-									<td>Juan Pablo</td>
-									<td>Carrera 6 sur</td>
+									<td>2</td>
+									<td>En proceso</td>
+									<td>20/07/2022</td>
+									<td>No existentes</td>
+									<td>Solicitud no. 6</td>
 									<td>
 										<div class="dropdown">
 											<a class="btn btn-link font-24 p-0 line-height-1 no-arrow dropdown-toggle" href="#" role="button" data-toggle="dropdown">
