--- a/layaout/verRegistroPerrito.html
+++ b/layaout/verRegistroPerrito.html
@@ -192,6 +192,8 @@
 						<ul class="submenu">
 							<li><a href="listaAdopciones.html">Lista de adopciones</a></li>
 							<li><a href="mascota.html">Mascota</a></li>
+							<li><a href="listaMascotas.html">Lista Mascotas</a></li>
+
 							<li><a href="historialMedico.html">Historial Medico</a></li>
 							<li><a href="listaSolicitudes.html">Lista de solicitudes</a></li>
 							<li><a href="seguimientoProceso.html">Seguimiento de proceso</a></li>
@@ -235,7 +237,7 @@
 							<nav aria-label="breadcrumb" role="navigation">
 								<ol class="breadcrumb">
 									<li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
-									<li class="breadcrumb-item"><a href="/layaout/mascota.html">Mascotas</a></li>
+									<li class="breadcrumb-item"><a href="/layaout/listaMascotas.html">Listado</a></li>
 									<li class="breadcrumb-item active" aria-current="page">Ver mascota</li>
 								</ol>
 							</nav>
@@ -254,38 +256,38 @@
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Nombre</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="Lucas">
+								<input disabled class="form-control" type="text" placeholder="Lucas">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Caracteristicas</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="Dorado">
+								<input disabled class="form-control" type="text" placeholder="Dorado">
 							</div>
 						</div>
 						<div class="form-group row">
-							<label class="col-sm-12 col-md-2 col-form-label">Fecha</label>
+							<label class="col-sm-12 col-md-2 col-form-label">Fecha Ingreso</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="date" placeholder="08/10/2023">
+								<input disabled class="form-control" type="date" placeholder="08/10/2023">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Edad</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="10 meses">
+								<input disabled class="form-control" type="text" placeholder="10 meses">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Raza</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="Criollo">
+								<input disabled class="form-control" type="text" placeholder="Criollo">
 							</div>
 						</div>
 					
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Sexo</label>
 							<div class="col-sm-12 col-md-10">
-								<select class="custom-select col-12">
+								<select disabled class="custom-select col-12">
 									<option selected="">Selecciona</option>
 									<option value="1">Hembra</option>
 									<option value="2">Macho</option>
@@ -296,13 +298,13 @@
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Imagen</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="img" placeholder="png">
+								<input disabled class="form-control" type="file" placeholder="">
 							</div>
 						</div>
                             
 					</form>
-<a href="/layaout/mascota.html"><button class="btn btn-primary">Guardar</button></a>
-<a href="/layaout/mascota.html"><button style="border-color: brown; background-color: brown;" class="btn btn-primary">Cancelar</button></a>
+<a href="/layaout/listaMascotas.html"><button class="btn btn-primary">Guardar</button></a>
+<a href="/layaout/listaMascotas.html"><button style="border-color: brown; background-color: brown;" class="btn btn-primary">Cancelar</button></a>
 
 
 </form>
