--- a/register.html
+++ b/register.html
@@ -140,16 +140,16 @@ class="login-page">
 											<label class="col-sm-4 col-form-label">Tipo de documento*</label>
 											<div class="col-sm-8">
 												<div class="custom-control custom-radio custom-control-inline pb-0">
-													<input type="radio" id="male" name="gender" class="custom-control-input">
-													<label class="custom-control-label" for="male">CE</label>
+													<input type="radio" id="CE" name="gender" class="custom-control-input">
+													<label class="custom-control-label" for="CE">CE</label>
 												</div>
 												<div class="custom-control custom-radio custom-control-inline pb-0">
-													<input type="radio" id="female" name="gender" class="custom-control-input">
-													<label class="custom-control-label" for="female">CC</label>
+													<input type="radio" id="CC" name="gender" class="custom-control-input">
+													<label class="custom-control-label" for="CC">CC</label>
 												</div>
 												<div class="custom-control custom-radio custom-control-inline pb-0">
-													<input type="radio" id="female" name="gender" class="custom-control-input">
-													<label class="custom-control-label" for="female">TI</label>
+													<input type="radio" id="TI" name="gender" class="custom-control-input">
+													<label class="custom-control-label" for="TI">TI</label>
 												</div>
 											</div>
 										</div>
