--- a/restablecerContraseña.html
+++ b/restablecerContraseña.html
@@ -83,23 +83,18 @@
 				<div class="col-md-6">
 					<img src="img/imagenPassword.png" alt="">
 				</div>
+				
 				<div class="col-md-6">
 					<div class="login-box bg-white box-shadow border-radius-10">
 						<div class="login-title">
-							<h2 style="font-family: Nunito;" class="text-center text-primary">Restablecer Contraseña</h2>
+							<h2 class="text-center text-primary">Olvidé la contraseña</h2>
 						</div>
-						<h6 style="font-family: Nunito;" class="mb-20">Ingresa tu nueva contraseña, confirma y envia</h6>
+						<h6 class="mb-20">Ingresa tu correo para reestablecer tu contraseña</h6>
 						<form>
 							<div class="input-group custom">
-								<input type="text" class="form-control form-control-lg" placeholder="Nueva contraseña">
+								<input type="text" class="form-control form-control-lg" placeholder="Email">
 								<div class="input-group-append custom">
-									<span class="input-group-text"><i class="dw dw-padlock1"></i></span>
-								</div>
-							</div>
-							<div class="input-group custom">
-								<input type="text" class="form-control form-control-lg" placeholder="Confirma tu nueva contraseña">
-								<div class="input-group-append custom">
-									<span class="input-group-text"><i class="dw dw-padlock1"></i></span>
+									<span class="input-group-text"><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
 								</div>
 							</div>
 							<div class="row align-items-center">
@@ -109,7 +104,15 @@
 											use code for form submit
 											<input class="btn btn-primary btn-lg btn-block" type="submit" value="Submit">
 										-->
-										<a class="btn btn-primary btn-lg btn-block" href="login.html">Enviar</a>
+										<a class="btn btn-primary btn-lg btn-block" href="index.html">Enviar</a>
+									</div>
+								</div>
+								<div class="col-2">
+									<div class="font-16 weight-600 text-center" data-color="#707373">O</div>
+								</div>
+								<div class="col-5">
+									<div class="input-group mb-0">
+										<a class="btn btn-outline-primary btn-lg btn-block" href="login.html">Ingresar</a>
 									</div>
 								</div>
 							</div>
