--- a/layaout/eliminarListaAdopciones.html
+++ b/layaout/eliminarListaAdopciones.html
@@ -4,11 +4,8 @@
 <head>
 	<!-- Basic Page Info -->
 	<meta charset="utf-8">
-<<<<<<< HEAD
 	<title>Eliminar</title>
-=======
 	<title>Eliminar lista adopciones</title>
->>>>>>> 7c301a7 (Se agrega la categoria gestion de adoptantes, se realiza las interfaces de todo el CRUD para gestion de usuarios y de adoptantes, se aplica aside y header a las interfaces que hacian falta por modificar)
 
 	<!-- Site favicon -->
 	<link rel="website icon" href="vendors/images/listaAdopciones.png">
@@ -196,6 +193,7 @@
 						<ul class="submenu">
 							<li><a href="listaAdopciones.html">Lista de adopciones</a></li>
 							<li><a href="mascota.html">Mascota</a></li>
+							<li><a href="listaMascotas.html">Lista Mascotas</a></li>
 							<li><a href="historialMedico.html">Historial Medico</a></li>
 							<li><a href="listaSolicitudes.html">Lista de solicitudes</a></li>
 							<li><a href="seguimientoProceso.html">Seguimiento de proceso</a></li>
@@ -238,12 +236,10 @@
 							</div>
 							<nav aria-label="breadcrumb" role="navigation">
 								<ol class="breadcrumb">
-<<<<<<< HEAD
 
 									<li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
-=======
+
 									<li class="breadcrumb-item"><a href="/layaout/index.html">Inicio</a></li>
->>>>>>> 7c301a7 (Se agrega la categoria gestion de adoptantes, se realiza las interfaces de todo el CRUD para gestion de usuarios y de adoptantes, se aplica aside y header a las interfaces que hacian falta por modificar)
 									<li class="breadcrumb-item"><a href="/layaout/listaAdopciones.html">Listado de adopciones</a></li>
 									<li class="breadcrumb-item active" aria-current="page">Eliminar registro</li>
 								</ol>
