Se ultimaron detalles

--- a/layaout/editarEntradasArticulos.html
+++ b/layaout/editarEntradasArticulos.html
@@ -235,8 +235,10 @@
 							</div>
 							<nav aria-label="breadcrumb" role="navigation">
 								<ol class="breadcrumb">
-									<li class="breadcrumb-item"><a href="entradas.html">Inventario</a></li>
-									<li class="breadcrumb-item active" aria-current="page">Entradas</li>
+									<li class="breadcrumb-item"><a href="consultarInventario.html">Inventario</a></li>
+									<li class="breadcrumb-item"><a href="entradas.html">Entradas</a></li>
+
+									<li class="breadcrumb-item active" aria-current="page">Editar registro</li>
 								</ol>
 							</nav>
 						</div>
@@ -254,13 +256,13 @@
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Referencia</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="Lucas">
+								<input class="form-control" type="text" placeholder="">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Cantidad</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="Golden">
+								<input class="form-control" type="text" placeholder="">
 							</div>
 						</div>
                         <div class="form-group row">
@@ -279,7 +281,7 @@
 				<!-- Input Validation End -->
 			</div>
 			<div class="footer-wrap pd-20 mb-20 card-box">
-				DeskApp - Bootstrap 4 Admin Template By <a href="https://github.com/dropways" target="_blank">Ankit Hingarajiya</a>
+				Doggy At Home <a href="#" target="_blank">All Rights Reserved.</a>
 			</div>
 		</div>
 	</div>
