--- a/layaout/eliminarEntradaArticulos.html
+++ b/layaout/eliminarEntradaArticulos.html
@@ -231,12 +231,12 @@
 					<div class="row">
 						<div class="col-md-6 col-sm-12">
 							<div class="title">
-								<h4>Inhabilitar donación</h4>
+								<h4>Inhabilitar registro</h4>
 							</div>
 							<nav aria-label="breadcrumb" role="navigation">
 								<ol class="breadcrumb">
 									<li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
-									<li class="breadcrumb-item"><a href="/layaout/listaArticulos.html">Articulos</a></li>
+									<li class="breadcrumb-item"><a href="/layaout/consultarInventario.html">Inventario</a></li>
 									<li class="breadcrumb-item"><a href="/layaout/entradas.html">Entradas</a></li>
 
 									<li class="breadcrumb-item active" aria-current="page">Inhabilitar entrada</li>
