--- a/layaout/entradas.html
+++ b/layaout/entradas.html
@@ -236,7 +236,7 @@
 							<nav aria-label="breadcrumb" role="navigation">
 								<ol class="breadcrumb">
 									<li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
-									<li class="breadcrumb-item"><a href="/layaout/listaArticulos.html">Articulos</a></li>
+									<li class="breadcrumb-item"><a href="/layaout/consultarInventario.html">Inventario</a></li>
 
 									<li class="breadcrumb-item active" aria-current="page">Entradas</li>
 								</ol>
@@ -244,19 +244,20 @@
 						</div>
 						<div class="col-md-6 col-sm-12 text-right">
 							
-							<div class="dropdown">
-								<a class="btn btn-primary" href="nuevoArticuloEntradas.html" role="button" data-toggle="">
-									Nuevo
-								</a>
-							</div>
+							
 						</div>
 					</div>
 				</div>
 				<div class="card-box mb-30">
 					<div class="pd-20">
+						<h4 class="text-blue h4">Listado</h4><br>
+						<a href="/layaout/nuevoArticuloEntradas.html"><button style="background-color: #1b00ff;"  class="btn btn-success ">Registrar un nuevo articulo </button></a><br>
+
+					</div>
+					<div class="pd-20">
 					</div>
 					<div class="pb-20">
-						<table class="data-table table stripe hover nowrap">
+						<table class="table hover multiple-select-row data-table-export nowrap">
 							<thead>
 								<tr>
 									<th class="table-plus datatable-nosort">Id</th>
@@ -268,9 +269,9 @@
 							</thead>
 							<tbody>
 								<tr>
-									<td class="table-plus">Gloria F. Mead</td>
-									<td>25</td>
-									<td>Sagittarius</td>
+									<td class="table-plus">1</td>
+									<td>PLA01</td>
+									<td>30</td>
 									<td>29-03-2018</td>
 									<td>
 										<div class="dropdown">
