--- a/layaout/salidas.html
+++ b/layaout/salidas.html
@@ -236,7 +236,7 @@
 							<nav aria-label="breadcrumb" role="navigation">
 								<ol class="breadcrumb">
 									<li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
-									<li class="breadcrumb-item"><a href="/layaout/listaArticulos.html">Articulos</a></li>
+									<li class="breadcrumb-item"><a href="/layaout/consultarInventario.html">Inventario</a></li>
 
 									<li class="breadcrumb-item active" aria-current="page">Salidas</li>
 								</ol>
@@ -256,7 +256,7 @@
 					<div class="pd-20">
 					</div>
 					<div class="pb-20">
-						<table class="data-table table stripe hover nowrap">
+						<table class="table hover multiple-select-row data-table-export nowrap">
 							<thead>
 								<tr>
 									<th class="table-plus datatable-nosort">Id</th>
