--- a/layaout/editarSalidaArticulos.html
+++ b/layaout/editarSalidaArticulos.html
@@ -235,8 +235,10 @@
 							</div>
 							<nav aria-label="breadcrumb" role="navigation">
 								<ol class="breadcrumb">
-									<li class="breadcrumb-item"><a href="salidas.html">Inventario</a></li>
-									<li class="breadcrumb-item active" aria-current="page">Salidas</li>
+									<li class="breadcrumb-item"><a href="consultarInventario.html">Inventario</a></li>
+									<li class="breadcrumb-item"><a href="salidas.html">Salidas</a></li>
+
+									<li class="breadcrumb-item active" aria-current="page">Editar registro</li>
 								</ol>
 							</nav>
 						</div>
@@ -279,7 +281,7 @@
 				<!-- Input Validation End -->
 			</div>
 			<div class="footer-wrap pd-20 mb-20 card-box">
-				DeskApp - Bootstrap 4 Admin Template By <a href="https://github.com/dropways" target="_blank">Ankit Hingarajiya</a>
+				Doggy At Home <a href="#" target="_blank">All Rights Reserved.</a>
 			</div>
 		</div>
 	</div>
