--- a/layaout/nuevoArticuloEntradas.html
+++ b/layaout/nuevoArticuloEntradas.html
@@ -256,13 +256,13 @@
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Referencia</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="Lucas">
+								<input class="form-control" type="text" placeholder="">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Cantidad</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="Golden">
+								<input class="form-control" type="text" placeholder="">
 							</div>
 						</div>
                         <div class="form-group row">
