--- a/layaout/verSalidasArticulo.html
+++ b/layaout/verSalidasArticulo.html
@@ -251,7 +251,7 @@
 							<nav aria-label="breadcrumb" role="navigation">
 								<ol class="breadcrumb">
 									<li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
-									<li class="breadcrumb-item"><a href="listaArticulos.html">Articulos</a></li>
+									<li class="breadcrumb-item"><a href="consultarInventario.html">Inventario</a></li>
 									<li class="breadcrumb-item"><a href="salidas.html">Salidas</a></li>
 									<li class="breadcrumb-item active" aria-current="page">Consultar Salida</li>
 								</ol>
