Funcionamiento php de login, register y usuarios

--- a/layaout/index.html
+++ b/layaout/index.html
@@ -179,10 +179,10 @@
 							<span class="micon dw dw-library"></span><span class="mtext">Usuarios</span>
 						</a>
 						<ul class="submenu">
-							<li><a href="usuarios.html">Gestión de usuarios</a></li>
+							<li><a href="usuarios.php">Gestión de usuarios</a></li>
 						</ul>
 						<ul class="submenu">
-							<li><a href="adoptantes.html">Gestión de adoptantes</a></li>
+							<li><a href="adoptantes.php">Gestión de adoptantes</a></li>
 						</ul>
 					</li>
 					<li class="dropdown">
@@ -192,6 +192,7 @@
 						<ul class="submenu">
 							<li><a href="listaAdopciones.html">Lista de adopciones</a></li>
 							<li><a href="mascota.html">Mascota</a></li>
+							<li><a href="listaMascotas.html.html">Lista de mascota</a></li>
 							<li><a href="historialMedico.html">Historial Medico</a></li>
 							<li><a href="listaSolicitudes.html">Lista de solicitudes</a></li>
 							<li><a href="seguimientoProceso.html">Seguimiento de proceso</a></li>
