--- a/layaout/registroUsuario.html
+++ b/layaout/registroUsuario.html
@@ -192,7 +192,6 @@
 						<ul class="submenu">
 							<li><a href="listaAdopciones.html">Lista de adopciones</a></li>
 							<li><a href="mascota.html">Mascota</a></li>
-							<li><a href="listaMascotas.html">Lista Mascotas</a></li>
 							<li><a href="historialMedico.html">Historial Medico</a></li>
 							<li><a href="listaSolicitudes.html">Lista de solicitudes</a></li>
 							<li><a href="seguimientoProceso.html">Seguimiento de proceso</a></li>
@@ -251,23 +250,23 @@
 						</div>
 						
 					</div>
-					<form>
+					<form action="registrarUsuario.php" method="post">
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Nombres</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="Pedro">
+								<input class="form-control" type="text" placeholder="" name="nombres">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Apellidos</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="sarmiento">
+								<input class="form-control" type="text" placeholder="" name="apellidos">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Tipo Documento</label>
 							<div class="col-sm-12 col-md-10">
-								<select class="custom-select col-12">
+								<select class="custom-select col-12" name="tipoDocumento">
 									<option selected="">Selecciona</option>
 									<option value="1">CC</option>
 									<option value="2">TI</option>
@@ -278,79 +277,81 @@
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Documento</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="sarmiento">
+								<input class="form-control" type="text" placeholder="" name="documento">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Usuario</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="sarmiento">
+								<input class="form-control" type="text" placeholder="" name="usuario">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Contraseña</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="password" placeholder="sarmiento">
+								<input class="form-control" type="password" placeholder="" name="contraseña">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Repetir contraseña</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="password" placeholder="sarmiento">
+								<input class="form-control" type="password" placeholder="" name="confirmarContraseña">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Celular</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="10 meses">
+								<input class="form-control" type="text" placeholder="" name="celular">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Ciudad</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="Criollo">
+								<input class="form-control" type="text" placeholder="" name="ciudad">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Dirección</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="Criollo">
+								<input class="form-control" type="text" placeholder="" name="direccion">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Correo</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="Criollo">
+								<input class="form-control" type="text" placeholder="" name="correo">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Rol</label>
 							<div class="col-sm-12 col-md-10">
-								<select class="custom-select col-12">
+								<select class="custom-select col-12" name="rol">
 									<option selected="">Selecciona</option>
 									<option value="1">Administrador</option>
 									<option value="2">Veterinario</option>
 								</select>
 							</div>
 						</div>
-                            
+
+						<input type="submit" name="" value="registrar" class="btn btn-primary">
 					</form>
-<a href="/layaout/usuarios.html"><button class="btn btn-primary">Guardar</button></a>
-<a href="/layaout/usuarios.html"><button style="border-color: brown; background-color: brown;" class="btn btn-primary">Cancelar</button></a>
-
-
+					<br>
+<a href="usuarios.php"><button style="border-color: brown; background-color: brown;" class="btn btn-primary">Cancelar</button></a>
 </form>
-				<!-- Input Validation End -->
-			</div>
-			<div class="footer-wrap pd-20 mb-20 card-box">
-				DeskApp - Bootstrap 4 Admin Template By <a href="https://github.com/dropways" target="_blank">Ankit Hingarajiya</a>
-			</div>
-		</div>
-	</div>
-	<!-- js -->
 	<script src="vendors/scripts/core.js"></script>
 	<script src="vendors/scripts/script.min.js"></script>
 	<script src="vendors/scripts/process.js"></script>
 	<script src="vendors/scripts/layout-settings.js"></script>
+	<script src="src/plugins/jquery-steps/jquery.steps.js"></script>
+	<script src="vendors/scripts/steps-setting.js"></script>
+				<!-- Input Validation End -->
+			</div>
+			<div class="footer-wrap pd-20 mb-20 card-box">
+				Doggy At Home <a href="#" target="_blank">All Rights Reserved.</a>
+			</div>
+		</div>
+	</div>
+	<!-- js -->
+
 </body>
 </html>
