--- a/layaout/inhabilitarUsuario.html
+++ b/layaout/inhabilitarUsuario.html
@@ -236,23 +236,25 @@
 							<nav aria-label="breadcrumb" role="navigation">
 								<ol class="breadcrumb">
 									<li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
-									<li class="breadcrumb-item"><a href="adoptantes.html">Usuario</a></li>
+									<li class="breadcrumb-item"><a href="usuarios.php">Usuario</a></li>
 									<li class="breadcrumb-item active" aria-current="page">Inhabilitar usuario</li>
 								</ol>
 							</nav>
 						</div>
 					</div>
 				</div>
+				<form action="inhabilitarUsuario.php" method="post">
 				<div class="pd-20 bg-white border-radius-4 box-shadow mb-30" >
 					<div class="col-lg-12 col-md-6 col-sm-12 mb-30">
 						<div class="pd-20 card-box text-center height-100-p">
 							<h5 class="pt-20 h5 mb-30">¿Estás seguro de inhabilitar a este usuario?</h5>
 							<div class="max-width-200 mx-auto">
-								<button type="button" class="btn mb-20 btn-primary btn-block" id="sa-warning">Inhabilitar</button>
+								<input type="submit" name="Inhabilitar" value="Inhabilitar" id="sa-warning" class="btn mb-20 btn-primary btn-block">
 							</div>
 						</div>
 					</div>
 				</div>
+				</form>
 			</div>
 			<div class="footer-wrap pd-20 mb-20 card-box">
 				Doggy At Home <a href="#" target="_blank">All Rights Reserved.</a>
