Se agrega la funcionalidad del CRUD a los articulos, se agrega listado a entradas e inventario

--- a/layaout/index.html
+++ b/layaout/index.html
@@ -213,8 +213,8 @@
 							<span class="micon dw dw-apartment"></span><span class="mtext"> Inventario </span>
 						</a>
 						<ul class="submenu">
-							<li><a href="consultarInventario.html">Consultar Inventario</a></li>
-							<li><a href="listaArticulos.html">Lista de articulos</a></li>
+							<li><a href="consultarInventario.php">Consultar Inventario</a></li>
+							<li><a href="listaArticulos.php">Lista de articulos</a></li>
 							
 						</ul>
 					</li>
