Se agrega el crud de lista de adopciones con funcionalidad

--- a/layaout/verDonacion.html
+++ b/layaout/verDonacion.html
@@ -236,7 +236,7 @@
 							<nav aria-label="breadcrumb" role="navigation">
 								<ol class="breadcrumb">
 									<li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
-									<li class="breadcrumb-item"><a href="listaDonaciones.html">Donaciones</a></li>
+									<li class="breadcrumb-item"><a href="listaDonaciones.php">Donaciones</a></li>
 									<li class="breadcrumb-item active" aria-current="page">Consultar donación</li>
 								</ol>
 							</nav>
@@ -252,6 +252,7 @@
 						
 					</div>
 					<form>
+						
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Tipo donación</label>
 							<div class="col-sm-12 col-md-10">
