--- a/layaout/registroDonacion.html
+++ b/layaout/registroDonacion.html
@@ -236,7 +236,7 @@
 							<nav aria-label="breadcrumb" role="navigation">
 								<ol class="breadcrumb">
 									<li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
-									<li class="breadcrumb-item"><a href="listaDonaciones.html">Donaciones</a></li>
+									<li class="breadcrumb-item"><a href="listaDonaciones.php">Donaciones</a></li>
 									<li class="breadcrumb-item active" aria-current="page">Nuevo registro donación</li>
 								</ol>
 							</nav>
