Se termino crud adopciones, excepto Seguimiento Proceso

--- a/layaout/index.html
+++ b/layaout/index.html
@@ -192,13 +192,9 @@
 						<ul class="submenu">
 							<li><a href="listaAdopciones.php">Lista de adopciones</a></li>
 							<li><a href="mascota.html">Mascota</a></li>
-<<<<<<< HEAD
-							<li><a href="listaMascotas.html.php">Lista de mascota</a></li>
-=======
 							<li><a href="listaMascotas.php">Lista de mascota</a></li>
->>>>>>> 4c56775 (Se agrega el CRUD de lista de adopciones funcional)
-							<li><a href="historialMedico.html">Historial Medico</a></li>
-							<li><a href="listaSolicitudes.html">Lista de solicitudes</a></li>
+							<li><a href="historialMedico.php">Historial Medico</a></li>
+							<li><a href="listaSolicitudes.php">Lista de solicitudes</a></li>
 							<li><a href="seguimientoProceso.html">Seguimiento de proceso</a></li>
 	
 						</ul>
