Se actualizó el aside y apartados faltantes

--- a/layaout/index.html
+++ b/layaout/index.html
@@ -77,8 +77,9 @@
 						<span class="user-name">Usuario</span>
 					</a>
 					<div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
-						<a class="dropdown-item" href="profile.html"><i class="dw dw-user1"></i> Perfil</a>					
-						<a class="dropdown-item" href="/index.html"><i class="dw dw-logout"></i> Cerrar Sesion</a>
+						<a class="dropdown-item" href="profile.html"><i class="dw dw-user1"></i>Perfil</a>	
+						<a class="dropdown-item" href="../index.html"><i class="dw dw-logout"></i>Cerrar Sesion</a>
+						
 					</div>
 				</div>
 			</div>
@@ -193,15 +194,9 @@
 							<li><a href="listaAdopciones.php">Lista de adopciones</a></li>
 							<li><a href="mascota.html">Mascota</a></li>
 							<li><a href="listaMascotas.php">Lista de mascota</a></li>
-<<<<<<< HEAD
 							<li><a href="historialMedico.php">Historial Medico</a></li>
 							<li><a href="listaSolicitudes.php">Lista de solicitudes</a></li>
-							<li><a href="seguimientoProceso.html">Seguimiento de proceso</a></li>
-=======
-							<li><a href="historialMedico.html">Historial Medico</a></li>
-							<li><a href="listaSolicitudes.html">Lista de solicitudes</a></li>
 							<li><a href="seguimientoProceso.php">Seguimiento de proceso</a></li>
->>>>>>> fb09331 (Se agrega el crud de donaciones y seguimiento de proceso)
 	
 						</ul>
 					</li>
@@ -246,20 +241,7 @@
 				</div>
 			</div>
 			
-			<div class="row">
-				<div class="col-xl-8 mb-30">
-					<div class="card-box height-100-p pd-20">
-						<h2 class="h4 mb-20">Historial de actividad</h2>
-						<div id="chart5"></div>
-					</div>
-				</div>
-				<div class="col-xl-4 mb-30">
-					<div class="card-box height-100-p pd-20">
-						<h2 class="h4 mb-20">Objetivo</h2>
-						<div id="chart6"></div>
-					</div>
-				</div>
-			</div>
+			
 			
 			<div class="footer-wrap pd-20 mb-20 card-box">
 				Doggy At Home <a href="#" target="_blank">All Rights Reserved.</a>
