--- a/layaoutVeterinario/mascota.html
+++ b/layaoutVeterinario/mascota.html
@@ -323,7 +323,7 @@
 								<div class="product-box">
 									<div class="producct-img"><img style="width: 570px; height: 290px;" src="vendors/images/rescatado9.jpg" alt=""></div>
 									<div style="text-align: center;" class="product-caption">
-										<h4><a href="historiaRescatado9.html">Kira</a></h4>
+										<h4><a href="historiaRescatado9.html">Nico</a></h4>
 										<div class="price">
 											<ins>Tinero y tranquilo, le encantan los besos</ins>
 										</div>
