--- a/layaout/mascota.html
+++ b/layaout/mascota.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,7 +6,7 @@
 	<title>Mascota</title>
 
 	<!-- Site favicon -->
-	<link rel="website icon" href="vendors/images/mascota.png">
+	<link rel="website icon" href="vendors/images/logoLigth.png">
 
 	<!-- Mobile Specific Metas -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -78,7 +77,7 @@
 					</a>
 					<div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
 						<a class="dropdown-item" href="profile.html"><i class="dw dw-user1"></i> Perfil</a>					
-						<a class="dropdown-item" href="/index.html"><i class="dw dw-logout"></i> Cerrar Sesion</a>
+						<a class="dropdown-item" href="../index.html"><i class="dw dw-logout"></i>Cerrar Sesion</a>
 					</div>
 				</div>
 			</div>
@@ -179,10 +178,10 @@
 							<span class="micon dw dw-library"></span><span class="mtext">Usuarios</span>
 						</a>
 						<ul class="submenu">
-							<li><a href="usuarios.html">Gestión de usuarios</a></li>
+							<li><a href="usuarios.php">Gestión de usuarios</a></li>
 						</ul>
 						<ul class="submenu">
-							<li><a href="adoptantes.html">Gestión de adoptantes</a></li>
+							<li><a href="adoptantes.php">Gestión de adoptantes</a></li>
 						</ul>
 					</li>
 					<li class="dropdown">
@@ -190,12 +189,12 @@
 							<span class="micon dw dw-edit2"></span><span class="mtext">Adopciones</span>
 						</a>
 						<ul class="submenu">
-							<li><a href="listaAdopciones.html">Lista de adopciones</a></li>
+							<li><a href="listaAdopciones.php">Lista de adopciones</a></li>
 							<li><a href="mascota.html">Mascota</a></li>
-							<li><a href="listaMascotas.html">Lista Mascotas</a></li>
-							<li><a href="historialMedico.html">Historial Medico</a></li>
-							<li><a href="listaSolicitudes.html">Lista de solicitudes</a></li>
-							<li><a href="seguimientoProceso.html">Seguimiento de proceso</a></li>
+							<li><a href="listaMascotas.php">Lista de mascota</a></li>
+							<li><a href="historialMedico.php">Historial Medico</a></li>
+							<li><a href="listaSolicitudes.php">Lista de solicitudes</a></li>
+							<li><a href="seguimientoProceso.php">Seguimiento de proceso</a></li>
 	
 						</ul>
 					</li>
@@ -204,7 +203,7 @@
 							<span class="micon dw dw-library"></span><span class="mtext">Donaciones</span>
 						</a>
 						<ul class="submenu">
-							<li><a href="listaDonaciones.html">Lista de donaciones</a></li>
+							<li><a href="listaDonaciones.php">Lista de donaciones</a></li>
 						</ul>
 					</li>
 				
@@ -213,8 +212,8 @@
 							<span class="micon dw dw-apartment"></span><span class="mtext"> Inventario </span>
 						</a>
 						<ul class="submenu">
-							<li><a href="consultarInventario.html">Consultar Inventario</a></li>
-							<li><a href="listaArticulos.html">Lista de articulos</a></li>
+							<li><a href="consultarInventario.php">Consultar Inventario</a></li>
+							<li><a href="listaArticulos.php">Lista de articulos</a></li>
 							
 						</ul>
 					</li>
@@ -250,11 +249,11 @@
 								<div class="product-box">
 									<div class="producct-img"><img style="height: 290px;" src="vendors/images/rescatado1.jpg" alt=""></div>
 									<div style="text-align: center;" class="product-caption">
-										<h4><a href="/layaout/historiaRescatado1.html">Logal</a></h4>
+										<h4><a href="historiaRescatado1.html">Logal</a></h4>
 										<div class="price">
 											<ins>Jugueton, mordelon, amoroso y protector</ins>
 										</div>
-										<a href="/layaout/historiaRescatado1.html" class="btn btn-outline-primary">Conocer más</a>
+										<a href="historiaRescatado1.html" class="btn btn-outline-primary">Conocer más</a>
 									</div>
 								</div>
 							</li>
@@ -262,11 +261,11 @@
 								<div class="product-box">
 									<div class="producct-img"><img style="height: 290px;" src="vendors/images/rescatado2.jpg" alt=""></div>
 									<div style="text-align: center;" class="product-caption">
-										<h4><a href="/layaout/historiaRescatado2.html">Mateo</a></h4>
+										<h4><a href="historiaRescatado2.html">Mateo</a></h4>
 										<div class="price">
 											<ins>Juicioso, amoroso, protector y super tierno</ins>
 										</div>
-										<a href="/layaout/historiaRescatado2.html" class="btn btn-outline-primary">Conocer más</a>
+										<a href="historiaRescatado2.html" class="btn btn-outline-primary">Conocer más</a>
 									</div>
 								</div>
 							</li>
@@ -274,11 +273,11 @@
 								<div class="product-box">
 									<div class="producct-img"><img style="width: 570px; height: 290px;" src="vendors/images/rescatado3.jpg" alt=""></div>
 									<div style="text-align: center;" class="product-caption">
-										<h4><a href="/layaout/historiaRescatado3.html">Sasha</a></h4>
+										<h4><a href="historiaRescatado3.html">Sasha</a></h4>
 										<div class="price">
 											<ins>Educada, amorosa, amigable y dormilona</ins>
 										</div>
-										<a href="/layaout/historiaRescatado3.html" class="btn btn-outline-primary">Conocer más</a>
+										<a href="historiaRescatado3.html" class="btn btn-outline-primary">Conocer más</a>
 									</div>
 								</div>
 							</li>
@@ -286,11 +285,11 @@
 								<div class="product-box">
 									<div class="producct-img"><img style="width: 570px; height: 290px;" src="vendors/images/rescatado4.jpg" alt=""></div>
 									<div style="text-align: center;" class="product-caption">
-										<h4><a href="/layaout/historiaRescatado4.html">Zeus</a></h4>
+										<h4><a href="historiaRescatado4.html">Zeus</a></h4>
 										<div class="price">
 											<ins>Tranquilo, le encantan las pelotas y da muchos besitos</ins>
 										</div>
-										<a href="/layaout/historiaRescatado4.html" class="btn btn-outline-primary">Conocer más</a>
+										<a href="historiaRescatado4.html" class="btn btn-outline-primary">Conocer más</a>
 									</div>
 								</div>
 							</li>
@@ -298,11 +297,11 @@
 								<div class="product-box">
 									<div class="producct-img"><img style="width: 570px; height: 290px;" src="vendors/images/rescatado5.jpg" alt=""></div>
 									<div style="text-align: center;" class="product-caption">
-										<h4><a href="/layaout/historiaRescatado5.html">Violeta</a></h4>
+										<h4><a href="historiaRescatado5.html">Violeta</a></h4>
 										<div class="price">
 											<ins>Juguetona, dormilona, le encantan las ramas</ins>
 										</div>
-										<a href="/layaout/historiaRescatado5.html" class="btn btn-outline-primary">Conocer más</a>
+										<a href="historiaRescatado5.html" class="btn btn-outline-primary">Conocer más</a>
 									</div>
 								</div>
 							</li>
@@ -310,11 +309,11 @@
 								<div class="product-box">
 									<div class="producct-img"><img style="width: 570px; height: 290px;" src="vendors/images/rescatado6.jpg" alt=""></div>
 									<div style="text-align: center;" class="product-caption">
-										<h4><a href="/layaout/historiaRescatado6.html">Luna</a></h4>
+										<h4><a href="historiaRescatado6.html">Luna</a></h4>
 										<div class="price">
 											<ins>Tranquila, comelona y amorosa</ins>
 										</div>
-										<a href="/layaout/historiaRescatado6.html" class="btn btn-outline-primary">Conocer más</a>
+										<a href="historiaRescatado6.html" class="btn btn-outline-primary">Conocer más</a>
 									</div>
 								</div>
 							</li>
@@ -322,11 +321,11 @@
 								<div class="product-box">
 									<div class="producct-img"><img style="width: 570px; height: 290px;" src="vendors/images/rescatado7.jpg" alt=""></div>
 									<div style="text-align: center;" class="product-caption">
-										<h4><a href="/layaout/historiaRescatado7.html">Lucas</a></h4>
+										<h4><a href="historiaRescatado7.html">Lucas</a></h4>
 										<div class="price">
 											<ins>Jugueton y amoroso, le encantan las caricias</ins>
 										</div>
-										<a href="/layaout/historiaRescatado7.html" class="btn btn-outline-primary">Conocer más</a>
+										<a href="historiaRescatado7.html" class="btn btn-outline-primary">Conocer más</a>
 									</div>
 								</div>
 							</li>
@@ -334,11 +333,11 @@
 								<div class="product-box">
 									<div class="producct-img"><img style="width: 570px; height: 290px;" src="vendors/images/rescatado8.jpg" alt=""></div>
 									<div style="text-align: center;" class="product-caption">
-										<h4><a href="/layaout/historiaRescatado8.html">Oscar</a></h4>
+										<h4><a href="historiaRescatado8.html">Oscar</a></h4>
 										<div class="price">
 											<ins>Comelon, jugueton y dormilon</ins>
 										</div>
-										<a href="/layaout/historiaRescatado8.html" class="btn btn-outline-primary">Conocer más</a>
+										<a href="historiaRescatado8.html" class="btn btn-outline-primary">Conocer más</a>
 									</div>
 								</div>
 							</li>
@@ -346,11 +345,11 @@
 								<div class="product-box">
 									<div class="producct-img"><img style="width: 570px; height: 290px;" src="vendors/images/rescatado9.jpg" alt=""></div>
 									<div style="text-align: center;" class="product-caption">
-										<h4><a href="/layaout/historiaRescatado9.html">Nico</a></h4>
+										<h4><a href="historiaRescatado9.html">Nico</a></h4>
 										<div class="price">
 											<ins>Tinero y tranquilo, le encantan los besos</ins>
 										</div>
-										<a href="/layaout/historiaRescatado9.html" class="btn btn-outline-primary">Conocer más</a>
+										<a href="historiaRescatado9.html" class="btn btn-outline-primary">Conocer más</a>
 									</div>
 								</div>
 							</li>
