--- a/register.html
+++ b/register.html
@@ -90,32 +90,32 @@ class="login-page">
 				<div class="col-md-6 col-lg-5">
 					<div class="register-box bg-white box-shadow border-radius-10">
 						<div class="wizard-content">
-							<form style="font-family: Nunito;" class="tab-wizard2 wizard-circle wizard">
+							<form style="font-family: Nunito;" class="tab-wizard2 wizard-circle wizard" action="registrar.php" method="post">
 								<h5> Datos básicos</h5>
 								<section>
 									<div class="form-wrap max-width-600 mx-auto">
 										<div class="form-group row">
 											<label class="col-sm-4 col-form-label">Email*</label>
 											<div class="col-sm-8">
-												<input type="email" class="form-control">
+												<input type="email" class="form-control" name="correo">
 											</div>
 										</div>
 										<div class="form-group row">
 											<label class="col-sm-4 col-form-label">Usuario*</label>
 											<div class="col-sm-8">
-												<input type="text" class="form-control">
+												<input type="text" class="form-control" name="usuario">
 											</div>
 										</div>
 										<div class="form-group row">
 											<label class="col-sm-4 col-form-label">Contraseña*</label>
 											<div class="col-sm-8">
-												<input type="password" class="form-control">
+												<input type="password" class="form-control" name="contraseña">
 											</div>
 										</div>
 										<div class="form-group row">
 											<label class="col-sm-4 col-form-label">Confirma la contraseña*</label>
 											<div class="col-sm-8">
-												<input type="password" class="form-control">
+												<input type="password" class="form-control" name="confirmarContraseña">
 											</div>
 										</div>
 									</div>
@@ -127,28 +127,28 @@ class="login-page">
 										<div class="form-group row">
 											<label class="col-sm-4 col-form-label">Nombres*</label>
 											<div class="col-sm-8">
-												<input type="text" class="form-control">
+												<input type="text" class="form-control" name="nombres">
 											</div>
 										</div>
 										<div class="form-group row">
 											<label class="col-sm-4 col-form-label">Apellidos*</label>
 											<div class="col-sm-8">
-												<input type="text" class="form-control">
+												<input type="text" class="form-control" name="apellidos">
 											</div>
 										</div>
 										<div class="form-group row align-items-center">
 											<label class="col-sm-4 col-form-label">Tipo de documento*</label>
 											<div class="col-sm-8">
 												<div class="custom-control custom-radio custom-control-inline pb-0">
-													<input type="radio" id="CE" name="gender" class="custom-control-input">
+													<input type="radio" id="CE" value="CE" name="tipoDocumento" class="custom-control-input">
 													<label class="custom-control-label" for="CE">CE</label>
 												</div>
 												<div class="custom-control custom-radio custom-control-inline pb-0">
-													<input type="radio" id="CC" name="gender" class="custom-control-input">
+													<input type="radio" id="CC" value="CC" name="tipoDocumento" class="custom-control-input">
 													<label class="custom-control-label" for="CC">CC</label>
 												</div>
 												<div class="custom-control custom-radio custom-control-inline pb-0">
-													<input type="radio" id="TI" name="gender" class="custom-control-input">
+													<input type="radio" id="TI" value="TI" name="tipoDocumento" class="custom-control-input">
 													<label class="custom-control-label" for="TI">TI</label>
 												</div>
 											</div>
@@ -156,7 +156,7 @@ class="login-page">
 										<div class="form-group row">
 											<label class="col-sm-4 col-form-label">Número documento</label>
 											<div class="col-sm-8">
-												<input type="text" class="form-control">
+												<input type="text" class="form-control" name="documento">
 											</div>
 										</div>
 									</div>
@@ -168,24 +168,24 @@ class="login-page">
 										<div class="form-group row align-items-center">
 											<label class="col-sm-4 col-form-label">Número de celular</label>
 											<div class="col-sm-8">
-												<input type="text" class="form-control">
+												<input type="text" class="form-control" name="celular">
 											</div>
 										</div>
 										<div class="form-group row align-items-center">
 											<label class="col-sm-4 col-form-label">Dirección</label>
 											<div class="col-sm-8">
-												<input type="text" class="form-control">
+												<input type="text" class="form-control" name="direccion">
 											</div>
 										</div>
 										<div class="form-group row align-items-center">
 											<label class="col-sm-4 col-form-label">Ciudad</label>
 											<div class="col-sm-8">
-												<input type="text" class="form-control">
+												<input type="text" class="form-control" name="ciudad">
 											</div>
 										</div>
 									</div>
 								</section>
-								
+								<button type="submit" value="registrar" id="success-modal-btn" hidden data-toggle="modal" data-target="#success-modal" data-backdrop="static">Launch modal</button>
 							</form>
 						</div>
 					</div>
